(lang dune 3.0)

(implicit_transitive_deps false)

(name jdlv_term)

(license ISC)

(authors "TODO")

(maintainers "TODO")

(source
 (uri TODO/jdlv_term))

(homepage TODO/jdlv_term)

(bug_reports TODO/jdlv_term)

(documentation TODO/jdlv_term)

(generate_opam_files true)

(package
 (name jdlv_term)
 (synopsis "OCaml library/executable to TODO")
 (description
  "jdlv_term is an OCaml library/executable to TODO.")
 (tags
  (jdlv_term TODO TODO TODO TODO))
 (depends
  (ocaml
   (>= 4.08))))
