(lang dune 3.0)

(implicit_transitive_deps false)

(name jdl_vdm)

(license ISC)

(authors "TODO")

(maintainers "TODO")

(source
 (uri TODO/jdl_vdm))

(homepage TODO/jdl_vdm)

(bug_reports TODO/jdl_vdm)

(documentation TODO/jdl_vdm)

(generate_opam_files true)

(package
 (name jdl_vdm)
 (synopsis "OCaml library/executable to TODO")
 (description
  "jdl_vdm is an OCaml library/executable to TODO.")
 (tags
  (jdl_vdm TODO TODO TODO TODO))
 (depends
  (ocaml
   (>= 4.08))))
